Fixed vcpkg access mode

--- a/clang-docker-env/Dockerfile
+++ b/clang-docker-env/Dockerfile
@@ -22,7 +22,7 @@ RUN apt-get update &&  \
 RUN git clone https://github.com/microsoft/vcpkg.git && \
     cd vcpkg && ./bootstrap-vcpkg.sh && \
     ./vcpkg install gtest benchmark && \
-    ./vcpkg integrate install
+    chown -R builder /vcpkg
 
 USER builder
 WORKDIR /app
