--- a/gnu-docker-env/Dockerfile
+++ b/gnu-docker-env/Dockerfile
@@ -11,7 +11,7 @@ RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/nul
     add-apt-repository ppa:ubuntu-toolchain-r/test
 
 RUN apt-get update &&  \
-    apt-get install --no-install-recommends -y rsync tar git zip curl unzip pkg-config gdb cmake ninja-build gcc-11 g++-11 binutils linux-tools-common linux-tools-generic linux-tools-`uname -r` && \
+    apt-get install --no-install-recommends -y rsync tar git zip curl unzip pkg-config gdb cmake ninja-build gcc-11 g++-11 binutils linux-tools-common linux-tools-generic && \
     apt-get clean && \
     update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 110 \
         --slave /usr/bin/g++ g++ /usr/bin/g++-11 \
@@ -19,6 +19,8 @@ RUN apt-get update &&  \
         --slave /usr/bin/gcc-ar gcc-ar /usr/bin/gcc-ar-11 \
         --slave /usr/bin/gcc-ranlib gcc-ranlib /usr/bin/gcc-ranlib-11 \
         --slave /usr/bin/cpp cpp /usr/bin/cpp-11
+
+RUN ln -fs /usr/lib/linux-tools/*/perf /usr/bin/perf
 
 RUN ln -s /usr/bin/g++ /usr/bin/c++ && \
     ln -s /usr/bin/gcc /usr/bin/cc
